name:                cpptest
version:             0.3.0.0
build-type:          Simple
cabal-version:       >= 1.10

-- For information on compiling C with cabal: http://blog.ezyang.com/2010/06/setting-up-cabal-the-ffi-and-c2hs/

executable cpptest
  default-language:   Haskell2010
  Include-dirs: src
  C-sources:    src/zq.cpp, src/main.cpp
  main-is: Main.hs
  extra-libraries: stdc++

  build-depends: base
