name:                cpptest
version:             0.1
build-type:          Simple
-- I have no idea what the minimum cabal version actually is.
cabal-version:       >= 1.25

-- For information on compiling C with cabal:
-- http://blog.ezyang.com/2010/06/setting-up-cabal-the-ffi-and-c2hs/
-- http://stackoverflow.com/questions/37572628/statically-link-c-library-with-a-haskell-library

executable cpptest
  default-language:   Haskell2010
  Include-dirs: src
  -- order matters on these cpp files when using `cabal repl`. See GHC#12152
  C-sources:    src/zq.cpp, src/main.cpp
  main-is: Main.hs
  -- we need stdc++ to use `cout`
  extra-libraries: stdc++

  build-depends: base
