name:                lol
-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.3.0.0
synopsis:            A library for lattice cryptography.
homepage:            https://github.com/cpeikert/Lol
Bug-Reports:         https://github.com/cpeikert/Lol/issues
author:              Eric Crockett <ecrockett0@gmail.com>, Chris Peikert <cpeikert@alum.mit.edu>
maintainer:          Eric Crockett <ecrockett0@gmail.com>
copyright:           Eric Crockett, Chris Peikert
category:            Crypto
stability:           experimental
build-type:          Simple
extra-source-files:  README
                     Crypto/Lol/Cyclotomic/Tensor/CTensor/tensorTypes.h,
                     Crypto/Lol/Cyclotomic/Tensor/CTensor/*.cpp
cabal-version:       >= 1.10
description:
    Λ ○ λ (Lol) is a general-purpose library for ring-based lattice cryptography.
    For a detailed description of interfaces and functionality, see
    <https://eprint.iacr.org/2015/1134 Λ ○ λ: A Functional Library for Lattice Cryptography>.
    For example cryptographic applications, see <https://hackage.haskell.org/package/lol-apps lol-apps>.
source-repository head
  type: git
  location: https://github.com/cpeikert/Lol

-- For information on compiling C with cabal: http://blog.ezyang.com/2010/06/setting-up-cabal-the-ffi-and-c2hs/

Flag llvm
  Description:  Compile via LLVM. This produces much better object code, but you need to have the LLVM compiler installed.
  Default:      False

Flag opt
  Description: Turn on library optimizations
  Default:     True

library
  default-language:   Haskell2010
  ghc-options: -fwarn-dodgy-imports
  Include-dirs: Crypto/Lol/Cyclotomic/Tensor/CTensor
  C-sources: Crypto/Lol/Cyclotomic/Tensor/CTensor/crt.cpp,
             Crypto/Lol/Cyclotomic/Tensor/CTensor/g.cpp,
             Crypto/Lol/Cyclotomic/Tensor/CTensor/generalfuncs.cpp,
             Crypto/Lol/Cyclotomic/Tensor/CTensor/l.cpp,
             Crypto/Lol/Cyclotomic/Tensor/CTensor/mul.cpp,
             Crypto/Lol/Cyclotomic/Tensor/CTensor/norm.cpp,
             Crypto/Lol/Cyclotomic/Tensor/CTensor/random.cpp
  Includes: Crypto/Lol/Cyclotomic/Tensor/CTensor/tensorTypes.h

  if flag(llvm)
    ghc-options: -fllvm -optlo-O3

  -- ghc optimizations
  if flag(opt)
    ghc-options: -O3 -Odph -funbox-strict-fields -fno-liberate-case -funfolding-use-threshold1000 -funfolding-keeness-factor1000

  exposed-modules:
    Crypto.Lol.Cyclotomic.Tensor
    Crypto.Lol.Cyclotomic.Tensor.CTensor

  other-modules:
    Crypto.Lol.Cyclotomic.Tensor.CTensor.Backend

  build-depends:
    base==4.8.*,
    vector==0.11.*

  other-extensions: TemplateHaskell

test-suite test-lol
  type:               exitcode-stdio-1.0
  hs-source-dirs:     tests
  default-language:   Haskell2010
  main-is:            Main.hs

  ghc-options: -threaded -rtsopts

  build-depends: base, lol
