name:                simplelib
version:             0.0.0.1
build-type:          Simple
cabal-version:       >= 1.10

library
  default-language:   Haskell2010

  exposed-modules:
    SimpleLib

  build-depends: base==4.8.*, hlibWithCPP

test-suite test
  type:               exitcode-stdio-1.0
  hs-source-dirs:     tests
  default-language:   Haskell2010
  main-is:            Main.hs

  build-depends: base, simplelib
